# go-backend-auth/docs/swagger.yaml
@@ -8,6 +8,9 @@ definitions:
       nama_lengkap:
         example: Budi Santoso
         type: string
+      no_telp:
+        example: "08123456789"
+        type: string
       nrp:
         example: "87011234"
         type: string
@@ -22,6 +25,7 @@ definitions:
     required:
     - jabatan
     - nama_lengkap
+    - no_telp
     - nrp
     - password
     - role
@@ -46,6 +50,10 @@ definitions:
       nama_lengkap:
         example: Budi Santoso
         type: string
+      no_telp:
+        description: Tambahan
+        example: "08123456789"
+        type: string
       nrp:
         example: "12345678"
         type: string
@@ -55,6 +63,7 @@ definitions:
     required:
     - jabatan
     - nama_lengkap
+    - no_telp
     - nrp
     - password
     type: object
@@ -65,6 +74,8 @@ definitions:
         type: string
       nama_lengkap:
         example: Budi Santoso S.H.
+        type: string
+      no_telp:
         type: string
       role:
         allOf:
@@ -79,10 +90,10 @@ definitions:
     - polsek
     type: string
     x-enum-comments:
-      RoleView: Default untuk user baru (pengganti pending)
+      RoleView: Default untuk user baru
     x-enum-descriptions:
     - ""
-    - Default untuk user baru (pengganti pending)
+    - Default untuk user baru
     - ""
     - ""
     x-enum-varnames:
@@ -98,7 +109,7 @@ info:
   description: API Service untuk Manajemen User (Login NRP) dan Pelaporan Data Kepolisian.
   termsOfService: http://swagger.io/terms/
   title: Backend API Polres & Polsek (Sistem NRP)
-  version: "1.2"
+  version: "1.3"
 paths:
   /admin/users:
     get:
@@ -211,7 +222,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: Mengupdate Nama, Jabatan, atau Role user.
+      description: Mengupdate Nama, Jabatan, Role, atau No Telp user.
       parameters:
       - description: User ID
         in: path
